LoadBalancer/hello-node-service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-hello-node
  labels:
    app: nodejs
spec:
  selector:
    app: nodejs
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 12345
      targetPort: 8080
